# pack

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo.example/: config.toml
.github/workflows/: rust.yml
advanced-examples/: README.md
advanced-examples/pack-from-java/: README.md  generate-testing-pem.sh  provide-libraries-to-java-project.sh
advanced-examples/pack-from-java/PackFromJava/: .project  build.gradle.kts  settings.gradle.kts
advanced-examples/pack-from-java/PackFromJava/app/: .project  build.gradle.kts
advanced-examples/pack-from-java/PackFromJava/app/src/main/: AndroidManifest.xml
advanced-examples/pack-from-java/PackFromJava/app/src/main/java/com/example/packfromjava/: MainActivity.java  PackPackage.java  StaticExampleData.java
advanced-examples/pack-from-java/PackFromJava/app/src/main/res/layout/: activity_main.xml
advanced-examples/pack-from-java/PackFromJava/app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
advanced-examples/pack-from-java/PackFromJava/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
advanced-examples/pack-from-java/PackFromJava/app/src/main/res/values-night/: themes.xml
advanced-examples/pack-from-java/PackFromJava/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
advanced-examples/pack-from-java/PackFromJava/gradle/wrapper/: gradle-wrapper.properties
advanced-examples/pack-from-java/pack-java/: Cargo.toml
advanced-examples/pack-from-java/pack-java/.cargo.example/: config.toml
advanced-examples/pack-from-java/pack-java/src/: lib.rs
pack-aab/: Cargo.toml  build.rs
pack-aab/src/: lib.rs  proto_util.rs  proto_xml.rs
pack-aab/src/proto/: BundleConfig.proto  Resources.proto
pack-api/: Cargo.toml
pack-api/src/: lib.rs
pack-asset-compiler/: Cargo.toml  build.rs
pack-asset-compiler/src/: internal_android_attributes.rs  lib.rs  resource_external_types.rs  resource_internal_types.rs  resource_table.rs  string_pool.rs  strings_xml_parser.rs  xml_file.rs  xml_first_pass.rs
pack-cli/: Cargo.toml
pack-cli/src/: main.rs  res_dir.rs
pack-common/: Cargo.toml
pack-common/src/: lib.rs
pack-sign/: Cargo.toml
pack-sign/src/: crypto.rs  crypto_keys.rs  hasher.rs  lib.rs  signed_data_block.rs  signing_block.rs  signing_types.rs  v1_signing.rs  zip_parser.rs  zip_rebuilder.rs
pack-wasm/: Cargo.toml
pack-wasm/src/: input_types.rs  lib.rs
pack-zip/: Cargo.toml
pack-zip/src/: lib.rs
