[package]
name = "pack-api"
version = "0.1.0"
edition = "2021"

[features]
cert-gen = ["pack-sign/cert-gen"]

[dependencies]
pack-asset-compiler = { path = "../pack-asset-compiler" }
pack-common = { path = "../pack-common" }
pack-sign = { path = "../pack-sign" }
pack-aab = { path = "../pack-aab" }
pack-zip = { path = "../pack-zip" }
deku = "0.19.0"
