[package]
name = "pack-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
base64 = "0.22.1"
pack-api = { path = "../pack-api" }

# This fixes a deep dependency issue in `rsa` that prevents it from compiling for WASM
[dependencies.getrandom]
version = "*"
features = ["js"]
